build: migrate to Java 17 (#410)
* feat: set Java 17 as source/target language level
* refactor: use pattern matching for instanceof #java17
* ci: upgrade spotbugs-maven-plugin, don't execute analysis in parallel
* refactor: use Stream.toList() #java17
* refactor: use switch expressions #java17
* refactor: use record for some inner classes #java17
* refactor: use text blocks #java17
* ci: update docker image for builds on eclipse CI
* refactor: use pattern matching for instanceof and Stream.toList #java17
* build: use JDK 17 in github action
* clean(sns): remove unnecessary default case